--- a/styles/main.css
+++ b/styles/main.css
@@ -7,12 +7,12 @@ body {
 }
 
 main {
-    background-image: url(".././images/a-twin-2.jpeg");
+    background-image: url(".././images/a-twin.jpg");
     background-size: cover;
     background-position-y: 30%;
     background-position-x: 40%;
     height: 80vh;
-    color: white;
+    color: #070707;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,8 +24,8 @@ main {
 
 .table {
     width: 60vw;
-    color: white;
-    background: black;
+    color: #f5f561;
+    background: #070707;
     opacity: 0.5;
 }
 
@@ -45,7 +45,7 @@ footer {
 
 .btn {
     border-radius: 50%;
-    color: white;
+    color: #f5f561;
 }
 
 .bi-binoculars-fill {
