--- a/styles/main.css
+++ b/styles/main.css
@@ -13,6 +13,10 @@ main {
     background-position-x: 40%;
     height: 80vh;
     color: #070707;
+    text-align: center;
+}
+
+.mission-list{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,14 +40,14 @@ thead {
 footer {
     height: 10vh;
     text-align: center;
-    color: white;
+    color: red;
 }
 
 .list-row:hover {
     color:red;
 }
 
-.btn {
+.btn-binoculars{
     border-radius: 50%;
     color: #f5f561;
 }
